--- a/index-text.html
+++ b/index-text.html
@@ -1017,6 +1017,132 @@
 </section>
 		</main>
 
+<!-- START: Corrected Footer Section -->
+<footer class="text-white pt-12">
+
+    <!-- Main Footer Area (Darkest Background) -->
+    <div class="bg-footer-teal">
+        <!-- The large top padding creates space for the floating contact cards -->
+        <div class="container mx-auto px-4 pt-16 pb-12">
+            <!-- Footer Grid -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-12">
+
+                <!-- Column 1 & 2: About, Logos & Newsletter -->
+                <div class="lg:col-span-2 space-y-6">
+                    <!-- Logo links to Home Page -->
+                    <a href="index.html" class="inline-block rounded-md"><img src="assets/images/logo.png" alt="IQ City Logo" class="w-24"></a>
+                    <div class="flex items-center space-x-3 pt-2">
+                        <div class="bg-white p-1 rounded-md"><img src="assets/images/medical-logo.png" alt="Accreditation Logo 1" class="h-10"></div>
+                        <div class="bg-white p-1 rounded-md"><img src="assets/images/medical-logo.png" alt="Accreditation Logo 2" class="h-10"></div>
+                        <div class="bg-white p-1 rounded-md"><img src="assets/images/nursing-logo.png" alt="Accreditation Logo 3" class="h-10"></div>
+                        <div class="bg-white p-1 rounded-md"><img src="assets/images/iqcity-logo.png" alt="Accreditation Logo 4" class="h-10"></div>
+                    </div>
+                    <p class="text-white/70 text-sm">Durgapur | District: Burdwan,<br>West Bengal I Pin: 713206</p>
+                    <!-- <div>
+                        <p class="font-semibold text-lg">Stay Update to our newsletter</p>
+                        <form class="flex mt-2">
+                            <input type="email" placeholder="Enter your email address" class="w-full rounded-l-md bg-black/20 text-white placeholder-white/50 py-2.5 px-4 focus:outline-none focus:ring-2 focus:ring-brand-green-dark border-none">
+                            <button type="submit" class="bg-white text-brand-teal font-bold px-5 rounded-r-md hover:bg-gray-200 transition-colors">Subscribe</button>
+                        </form>
+                    </div> -->
+                </div>
+
+                <!-- Column 3: Hospital Links -->
+                <div class="space-y-4">
+                    <h3 class="text-xl font-bold">Hospital</h3>
+                    <ul class="footer-menu">
+                        <li><a href="about.html" class="">About</a></li>
+                        <li><a href="initiatives.html" class="">Initiatives</a></li>
+                        <li><a href="contact.html" class="">Contact Us</a></li>
+                        <li><a href="sitemap.html" class="">Sitemap</a></li>
+                        <li><a href="disclaimer.html" class="">Disclaimer</a></li>
+                        <li><a href="career.html" class="">Career</a></li>
+                        <li><a href="blog.html" class="">Blog</a></li>
+                        <li><a href="privacy.html" class="">Privacy Policy</a></li>
+                    </ul>
+                </div>
+
+                <!-- Column 4: Patient Links -->
+                <div class="space-y-4">
+                    <h3 class="text-xl font-bold">Patient</h3>
+                    <ul class="space-y-3 text-sm">
+                        <li><a href="our-service.html" class="text-white/70 hover:text-white transition-colors">Our Services</a></li>
+                        <li><a href="department.html" class="text-white/70 hover:text-white transition-colors">Departments</a></li>
+                        <li><a href="doctors.html" class="text-white/70 hover:text-white transition-colors">Doctors</a></li>
+                        <li><a href="patient-center.html" class="text-white/70 hover:text-white transition-colors">Patient Center</a></li>
+                        <li><a href="Appointment.html" class="text-white/70 hover:text-white transition-colors">Book Appointment</a></li>
+                        <li><a href="feedback.html" class="text-white/70 hover:text-white transition-colors">Feedback</a></li>
+                        <li><a href="other-packages.html" class="text-white/70 hover:text-white transition-colors">Health Packages</a></li>
+                        <li><a href="faqs.html" class="text-white/70 hover:text-white transition-colors">FAQs</a></li>
+                    </ul>
+                </div>
+
+                <!-- Column 5: Contact Us -->
+                <div class="space-y-4">
+                    <h3 class="text-xl font-bold">Contact Us</h3>
+                    <ul class="space-y-3 text-sm">
+                        <li class="flex items-start">
+                            <i class="text-xl! ti ti-map-pin pr-2"></i>
+                            <span class="text-white/70">IQ City Medical College Hospital</span>
+                        </li>
+                        <li class="flex items-start">
+                            <i class="text-xl! ti ti-map-pin pr-2"></i>
+                            <span class="text-white/70">Durgapur | District: Burdwan,<br>West Bengal | Pin: 713206</span>
+                        </li>
+                        <li class="flex items-start">
+                            <i class="text-xl! ti ti-phone pr-2"></i>
+                            <span class="text-white/70">
+                                <strong>General Helpline:</strong> 9800508000 / 03432608000<br>
+                                <strong>OPD:</strong> 03432608000<br>
+                                <strong>Special Clinics:</strong> 03432608000 / 7477792010<br>
+                                <strong>Emergency:</strong> 9800508000 / 03432608888
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- Bottom Copyright & Social Bar (Slightly Lighter Background) -->
+    <div class="bg-footer-teal-darker py-6">
+        <div class="container mx-auto px-4">
+            <!-- Centering Container -->
+            <div class="flex flex-col items-center gap-4">
+                <!-- Social Icons -->
+                <div class="flex space-x-4">
+                    <!-- Note: You can replace '#' with your actual social media links -->
+                    <a href="#" class="text-white/50 hover:text-white transition-colors" aria-label="Facebook">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M10.1484 11.75H7.21875V20.5H3.3125V11.75H0.109375V8.15625H3.3125V5.38281C3.3125 2.25781 5.1875 0.5 8.03906 0.5C9.40625 0.5 10.8516 0.773438 10.8516 0.773438V3.85938H9.25C7.6875 3.85938 7.21875 4.79688 7.21875 5.8125V8.15625H10.6953L10.1484 11.75Z" />
+                        </svg>
+                    </a>
+                    <a href="#" class="text-white/50 hover:text-white transition-colors" aria-label="Twitter">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                           <path d="M18.4297 4.4375C18.4297 4.63281 18.4297 4.78906 18.4297 4.98438C18.4297 10.4141 14.3281 16.625 6.78906 16.625C4.44531 16.625 2.29688 15.9609 0.5 14.7891C0.8125 14.8281 1.125 14.8672 1.47656 14.8672C3.39062 14.8672 5.14844 14.2031 6.55469 13.1094C4.75781 13.0703 3.23438 11.8984 2.72656 10.2578C3 10.2969 3.23438 10.3359 3.50781 10.3359C3.85938 10.3359 4.25 10.2578 4.5625 10.1797C2.6875 9.78906 1.28125 8.14844 1.28125 6.15625V6.11719C1.82812 6.42969 2.49219 6.58594 3.15625 6.625C2.02344 5.88281 1.32031 4.63281 1.32031 3.22656C1.32031 2.44531 1.51562 1.74219 1.86719 1.15625C3.89844 3.61719 6.94531 5.25781 10.3438 5.45312C10.2656 5.14062 10.2266 4.82812 10.2266 4.51562C10.2266 2.25 12.0625 0.414062 14.3281 0.414062C15.5 0.414062 16.5547 0.882812 17.3359 1.70312C18.2344 1.50781 19.1328 1.15625 19.9141 0.6875C19.6016 1.66406 18.9766 2.44531 18.1172 2.95312C18.9375 2.875 19.7578 2.64062 20.4609 2.32812C19.9141 3.14844 19.2109 3.85156 18.4297 4.4375Z" />
+                        </svg>
+                    </a>
+                    <a href="#" class="text-white/50 hover:text-white transition-colors" aria-label="Instagram">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                           <path d="M9.5 5.00781C11.9609 5.00781 13.9922 7.03906 13.9922 9.5C13.9922 12 11.9609 13.9922 9.5 13.9922C7 13.9922 5.00781 12 5.00781 9.5C5.00781 7.03906 7 5.00781 9.5 5.00781ZM9.5 12.4297C11.1016 12.4297 12.3906 11.1406 12.3906 9.5C12.3906 7.89844 11.1016 6.60938 9.5 6.60938C7.85938 6.60938 6.57031 7.89844 6.57031 9.5C6.57031 11.1406 7.89844 12.4297 9.5 12.4297ZM15.2031 4.85156C15.2031 5.4375 14.7344 5.90625 14.1484 5.90625C13.5625 5.90625 13.0938 5.4375 13.0938 4.85156C13.0938 4.26562 13.5625 3.79688 14.1484 3.79688C14.7344 3.79688 15.2031 4.26562 15.2031 4.85156ZM18.1719 5.90625C18.25 7.35156 18.25 11.6875 18.1719 13.1328C18.0938 14.5391 17.7812 15.75 16.7656 16.8047C15.75 17.8203 14.5 18.1328 13.0938 18.2109C11.6484 18.2891 7.3125 18.2891 5.86719 18.2109C4.46094 18.1328 3.25 17.8203 2.19531 16.8047C1.17969 15.75 0.867188 14.5391 0.789062 13.1328C0.710938 11.6875 0.710938 7.35156 0.789062 5.90625C0.867188 4.5 1.17969 3.25 2.19531 2.23438C3.25 1.21875 4.46094 0.90625 5.86719 0.828125C7.3125 0.75 11.6484 0.75 13.0938 0.828125C14.5 0.90625 15.75 1.21875 16.7656 2.23438C17.7812 3.25 18.0938 4.5 18.1719 5.90625ZM16.2969 14.6562C16.7656 13.5234 16.6484 10.7891 16.6484 9.5C16.6484 8.25 16.7656 5.51562 16.2969 4.34375C15.9844 3.60156 15.3984 2.97656 14.6562 2.70312C13.4844 2.23438 10.75 2.35156 9.5 2.35156C8.21094 2.35156 5.47656 2.23438 4.34375 2.70312C3.5625 3.01562 2.97656 3.60156 2.66406 4.34375C2.19531 5.51562 2.3125 8.25 2.3125 9.5C2.3125 10.7891 2.19531 13.5234 2.66406 14.6562C2.97656 15.4375 3.5625 16.0234 4.34375 16.3359C5.47656 16.8047 8.21094 16.6875 9.5 16.6875C10.75 16.6875 13.4844 16.8047 14.6562 16.3359C15.3984 16.0234 16.0234 15.4375 16.2969 14.6562Z" />
+                        </svg>
+                    </a>
+                    <a href="#" class="text-white/50 hover:text-white transition-colors" aria-label="YouTube">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M21.6953 2.38281C22.1641 4.02344 22.1641 7.53906 22.1641 7.53906C22.1641 7.53906 22.1641 11.0156 21.6953 12.6953C21.4609 13.6328 20.7188 14.3359 19.8203 14.5703C18.1406 15 11.5 15 11.5 15C11.5 15 4.82031 15 3.14062 14.5703C2.24219 14.3359 1.5 13.6328 1.26562 12.6953C0.796875 11.0156 0.796875 7.53906 0.796875 7.53906C0.796875 7.53906 0.796875 4.02344 1.26562 2.38281C1.5 1.44531 2.24219 0.703125 3.14062 0.46875C4.82031 0 11.5 0 11.5 0C11.5 0 18.1406 0 19.8203 0.46875C20.7188 0.703125 21.4609 1.44531 21.6953 2.38281ZM9.3125 10.7031L14.8594 7.53906L9.3125 4.375V10.7031Z" />
+                        </svg>
+                    </a>
+                </div>
+                <!-- Copyright Text -->
+                <p class="text-white/50 text-sm text-center">© 2025 IQ City Medical College Hospital, All Rights Reserved</p>
+            </div>
+        </div>
+    </div>
+
+</footer>
+
+
 		<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 		<script src="assets/js/main.js"></script>
 		<script type="module">
